--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -20,7 +20,9 @@
                 
             <section id="intro" class="wrapper style1 fullscreen fade-up ">
                     <div class="inner text-dark "  >
-                        <h1 >Simulador AFP</h1>
+                    <div class="card">
+                        <h1 >dsadasdas</h1>
+                    </div>
                         <p>Programa que busca orientar y simular los montos de jubilación<br />
                             Aprende mas en <a href="http://spensiones.cl">Intendencia AFP</a>.</p>
                             <%= link_to "My Blog", datos_path %>
