--- a/app/assets/stylesheets/pablo.scss
+++ b/app/assets/stylesheets/pablo.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the pablo controller here.
 // They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+// You can use Sass (SCSS) here: https://sass-
+body{
+        background-color: #F5F5F5;
+        color: rgb(0,0,0);
+      }
+h1{
+    color:black;
+}
