--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,19 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application'%>
-    <%= stylesheet_link_tag 'main'%>
+    
+    <style>
+      body{
+        background-color: #F5F5F5;
+        
+      }
+    </style>
     
   </head>
 
   <body>
 
-    
+    <%= render "pablo/navbar"%>
     <%= yield %>
   </body>
 
