--- a/app/views/pablo/index.html.erb
+++ b/app/views/pablo/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Pablo#index</h1>
-<p>Find me in app/views/pablo/index.html.erb</p>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+    
+    <%= link_to "hoalhahaoahlo",inicio_index_path,class:"btn btn-primary"%>
+    
+  </div>
+</div>
