--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,12 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application'%>
-    
-    <style>
-      body{
-        background-color: blue;
-        
-      }
-    </style>
+   
     
   </head>
 
-  <body>
+  <body style="background: -webkit-linear-gradient(left, #3931af, #00c6ff);">
 
-    <%= render "pablo/navbar"%>
     <%= yield %>
   </body>
 
