--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     
   </head>
 
-  <body style="background: -webkit-linear-gradient(left, #3931af, #00c6ff);">
+  <body >
 
     <%= yield %>
   </body>
