--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,12 +1,23 @@
 .register{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-    margin-top: 10%;
-    margin-bottom: 10%;
+    
+    
+}
+.bak1{
+    background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);
+}
+.bak2{
+    background: linear-gradient(90deg, #3F2B96 0%, #A8C0FF 100%);
+}
+.bak3{
+    background: linear-gradient(90deg, #fcff9e 0%, #c67700 100%);
+}
+.bak4{
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
 }
 .register-left{
     text-align: center;
     color: #fff;
-    margin-top: 4%;
+    margin-top: 5%;
 }
 .register-left input{
     border: none;
@@ -58,8 +69,9 @@
     background: #0062cc;
     color: #fff;
     font-weight: 600;
-    width: 50%;
+    width: auto;
     cursor: pointer;
+     text-decoration: none;
 }
 .register .nav-tabs{
     margin-top: 3%;
