--- a/app/views/main/_pagina3.html.erb
+++ b/app/views/main/_pagina3.html.erb
@@ -1,16 +1,16 @@
-<div class="container register">
+<div class="container-fluid register">
                 <div class="row">
                     <div class="col-md-3 register-left">
                         <img src="https://www.talosmarthome.com/wp-content/uploads/2019/11/FAQ-icon-Talo.png" alt=""/>
-                        <h3>Ahora ingresa tu situacion previsional</h3>
+                        <h3>ESTO GANARAS DE PENSION :</h3>
                     </div>
                     <div class="col-md-9 register-right">
                         
-                                <h3 class="register-heading">Ingresa otra cosa</h3>
+                                <h3 class="register-heading">blablabla lorem ipsum</h3>
                                 <div class="row register-form">
                                 
                                     <div class="col-md-6">
-                                        <%= form_with  do |form|%> 
+                                        <%= form_with(model: @usuario, local: true) do |form|%> 
                                         <div class="form-group">
                                             <%= form.text_field :nombre , class:"form-control", placeholder: "Nombre"%>
                                         </div>
