--- a/app/views/main/_pagina1.html.erb
+++ b/app/views/main/_pagina1.html.erb
@@ -1,143 +1,139 @@
-<div class="container-fluid bak2", style="padding-top: 10%;">
 <%= form_with(model: @usuario, local: true)  do |form|%> 
-<section id="one" style="height:100vh;">
-<div class="container-fluid register">
-            
-                <div class="row bak1">
-                    <div class="col-md-3 register-left ">
-                        <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
-                        <h3>Bienvenido</h3>
-                        <p>Simulador de pensiones!</p>
-                        
-                    </div>
-                        <div class="col-md-9 register-right">
-                        
-                                <h3 class="register-heading">Ingresa tus datos</h3>
-                                <div class="row register-form">
-                                
-                                    <div class="col-md-6">
-                                        
-                                        <div class="form-group">
-                                            <%= form.text_field :nombre , class:"form-control", placeholder: "Nombre"%>
-                                        </div>
-                                        <br>
-                                        <div class="form-group">
-                                            <%= form.text_field :correo , class:"form-control", placeholder: "Correo"%>
-                                        </div>
-                                        <br>
-                                        <div class="form-group">
-                                            <%= form.text_field :Edad , class:"form-control", placeholder: "Edad"%>
-                                        </div>
-                                        <br>
-                                      
-                                    </div>
-                                    <div class="col-md-4">
-                                        
-                                           <ul>Género: <%= form.select :genero, ["Femenino","Masculino"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
-                                        
-                                           
-                                           <%= link_to "Continuar", "#two" ,class:"btnRegister" %>
-                                        
-                                    </div>
-                                   
-                                </div>  
-                         </div>
+        <div class="container-fluid bak2", style="padding-top: 10%;"> 
+            <section id="one" style="height:100vh;">
+                <div class="register">
+                    <div class="row bak1">
+                            <div class="col-md-3 register-left ">
+                                <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
+                                <h3>Bienvenido</h3>
+                                <p>Simulador de pensiones!</p>
                             
-                       
-                </div>
-</div>
-</section>
-</div>
-     <div class="container-fluid register bak2">
-        <section id="two" style="height:100vh;padding-top:10%;">   
-           
-                <div class="row">
-                    <div class="col-md-3 register-left">
-                        <img src="https://www.talosmarthome.com/wp-content/uploads/2019/11/FAQ-icon-Talo.png" alt=""/>
-                        <h3>Ahora ingresa tu situacion previsional</h3>
-                    </div>
-                    <div class="col-md-9 register-right">
-                        
-                                <h3 class="register-heading">Ingresa otra cosa</h3>
-                                <div class="row register-form">
-                                
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <%= form.text_field :nombre2 , class:"form-control", placeholder: "Nombre"%>
+                            </div>
+                            <div class="col-md-9 register-right">
+                            
+                                    <h3 class="register-heading">Ingresa tus datos</h3>
+                                    <div class="row register-form">
+                                    
+                                        <div class="col-md-6">
+                                            
+                                            <div class="form-group">
+                                                <%= form.text_field :nombre , class:"form-control", placeholder: "Nombre"%>
+                                            </div>
+                                            <br>
+                                            <div class="form-group">
+                                                <%= form.text_field :correo , class:"form-control", placeholder: "Correo"%>
+                                            </div>
+                                            <br>
+                                            <div class="form-group">
+                                                <%= form.number_field :Edad , class:"form-control", placeholder: "Edad"%>
+                                            </div>
+                                            <br>
+                                          
                                         </div>
-                                        <br>
-                                        <div class="form-group">
-                                            <%= form.text_field :correo2 , class:"form-control", placeholder: "Correo"%>
+                                        <div class="col-md-4">
+                                            
+                                               <ul>Género: <%= form.select :genero, ["Femenino","Masculino"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
+                                            
+                                               
+                                               <%= link_to "Continuar", "#two" ,class:"btnRegister" %>
+                                            
                                         </div>
-                                        <br>
-                                        <div class="form-group">
-                                            <%= form.text_field :Edad2 , class:"form-control", placeholder: "Edad"%>
-                                        </div>
-                                        <br>
-                                        
                                        
-                                    </div>
-                                    <div class="col-md-4">
-                                        
-                                           <ul>Género: <%= form.select :genero2, ["Femenino","Masculino"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
-                                        
-                                           <%= link_to "Continuar", "#three",class:"btnRegister"  %>
-                                        
-                                    </div>
-                                 
-                                                
+                                    </div>  
+                            </div>
                                       
-                                </div>  
                     </div>
-                           
                 </div>
-            
-        </section>
-    </div>
-    <div class="container-fluid register bak3">
-        <section id="three" style="height:100vh;padding-top:10%;">   
-                <div class="row bak1">
-                    <div class="col-md-3 register-left ">
-                        <img src="https://www.talosmarthome.com/wp-content/uploads/2019/11/FAQ-icon-Talo.png" alt=""/>
-                        <h3>Ahora ingresa tu situacion previsional</h3>
-                    </div>
-                    <div class="col-md-9 register-right">
-                        
-                                <h3 class="register-heading">Ingresa otra cosa</h3>
-                                <div class="row register-form">
-                                
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <%= form.text_field :nombre3 , class:"form-control", placeholder: "Nombre"%>
+            </section>
+        </div>
+        <div class="container-fluid bak2", style="padding-top: 10%;"> 
+            <section id="two" style="height:100vh;">   
+                <div class="register">
+                    <div class="row">
+                            <div class="col-md-3 register-left">
+                                <img src="https://www.talosmarthome.com/wp-content/uploads/2019/11/FAQ-icon-Talo.png" alt=""/>
+                                <h3>Ahora ingresa tu situacion previsional</h3>
+                            </div>
+                                <div class="col-md-9 register-right">
+                            
+                                    <h3 class="register-heading">Ingresa otra cosa</h3>
+                                    <div class="row register-form">
+                                    
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                Edad que piensa jubilar:
+                                                <%= form.number_field :edadJub , class:"form-control", placeholder: ""%>
+                                            </div>
+                                            <br>
+                                            <div class="form-group">
+                                                <%= form.text_field :fondoP , class:"form-control", placeholder: "Correo"%>
+                                            </div>
+                                            <br>
+                                            <div class="form-group">
+                                                <%= form.text_field :Edad2 , class:"form-control", placeholder: "Edad"%>
+                                            </div>
+                                            <br>
+                                            
+                                           
                                         </div>
-                                        <br>
-                                        <div class="form-group">
-                                            <%= form.text_field :correo3 , class:"form-control", placeholder: "Correo"%>
+                                        <div class="col-md-4">
+
+                                                <ul>Pension: <%= form.select :pension, ["Capital","Cuprum","Habitat","Modelo","PlanVital","Provida","Uno"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
+
+                                                <ul>Fondo de Pension: <%= form.select :fondoP, ["A","B","C","D","E"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
+                                            
+                                               <%= link_to "Continuar", "#three",class:"btnRegister"  %>
+                                            
                                         </div>
-                                        <br>
-                                        <div class="form-group">
-                                            <%= form.text_field :Edad3 , class:"form-control", placeholder: "Edad"%>
-                                        </div>
-                                        <br>
-                                        
                                        
-                                    </div>
-                                    <div class="col-md-4">
-                                        
-                                           <ul>Género: <%= form.select :genero3, ["Femenino","Masculino"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
-                                        
-                                           <%= form.submit "Terminar" ,class:"btnRegister" %>
-                                        
-                                    </div>
-                                 
-                                                
-                                      
-                                </div>  
+                                    </div>  
+                                </div>      
                     </div>
-                           
                 </div>
-            
-        </section>
-    </div>
- <%end%>              
-</div>
+            </section>
+        </div>
+        <div class="container-fluid register bak2">
+            <section id="three" style="height:100vh;padding-top:10%;">   
+                <div class="register">
+                        <div class="row bak1">
+
+                                <div class="col-md-3 register-left ">
+                                    <img src="https://www.talosmarthome.com/wp-content/uploads/2019/11/FAQ-icon-Talo.png" alt=""/>
+                                    <h3>Ahora ingresa tu situacion previsional</h3>
+                                </div>
+                                <div class="col-md-9 register-right">
+                            
+                                    <h3 class="register-heading">Ingresa otra cosa</h3>
+                                    <div class="row register-form">
+                                    
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <%= form.text_field :nombre3 , class:"form-control", placeholder: "Nombre"%>
+                                            </div>
+                                            <br>
+                                            <div class="form-group">
+                                                <%= form.text_field :correo3 , class:"form-control", placeholder: "Correo"%>
+                                            </div>
+                                            <br>
+                                            <div class="form-group">
+                                                <%= form.text_field :Edad3 , class:"form-control", placeholder: "Edad"%>
+                                            </div>
+                                            <br>
+                                            
+                                           
+                                        </div>
+                                        <div class="col-md-4">
+                                            
+                                               <ul>F: <%= form.select :genero3, ["Femenino","Masculino"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
+                                            
+                                               <%= form.submit "Terminar" ,class:"btnRegister" %>
+                                            
+                                        </div>
+                                    </div>  
+                                </div>
+                        </div>
+                </div>
+            </section>
+        </div>
+        
+    <%end%> 
