--- a/app/views/main/_pagina1.html.erb
+++ b/app/views/main/_pagina1.html.erb
@@ -67,7 +67,7 @@
                                             
                                             <br>
                                             <div class="form-group">
-                                                <%= form.text_field :Mcotiza , class:"form-control", placeholder: "Meses que cotiza al año"%>
+                                                <%= form.number_field :Mcotiza , class:"form-control", placeholder: "Meses que cotiza al año"%>
                                             </div>
                                             <br>
                                         <div class="row">
@@ -104,7 +104,8 @@
                                                     <br>
                                                 <div class="form-group">
                                                     
-                                                    <ul>Fondo en este periodo: <%= form.select :fondoPerC, ["B","C","D","E"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
+                                                    <ul>Fondo en este periodo:
+                                                    <%= form.select :fondoPerC, ["B","C","D","E"] , class:"form-select",arialabel:".form-select-lg example" %> </ul>
                                                 </div>
                                                     <br>
                                             </div>
@@ -112,6 +113,11 @@
                                            
                                         </div>
                                         <div class="col-md-4">
+                                                <br>
+                                                <div class="form-group">
+                                                    <%= form.number_field :ahorrado , class:"form-control", placeholder: "Ahorro actual"%>
+                                                </div>
+                                        
                                                 <br>
                                                 <ul>Pension: <%= form.select :pension, ["Capital","Cuprum","Habitat","Modelo","PlanVital","Provida","Uno"] , class:"form-select",arialabel:".form-select-lg example" %></ul>
                                                 <br>
