--- a/app/views/main/_resultados.html.erb
+++ b/app/views/main/_resultados.html.erb
@@ -10,7 +10,10 @@
                                     <div class="row register-form">
                                     
                                         <div class="col-md-6">
-                                         <h1>Tu sueldo esperado : <%= @sueldo %> </h1> 
+                                         <h1>Tu sueldo esperado : $<%= @sueldoEsperado.to_i  %> </h1> 
+                                         <h1>Tu sueldo esperado SInCNu: $<%= @sueldoEsperadoSinCnu.to_i  %> </h1> 
+
+                                         <h1>global: $<%= @aux  %> </h1>
                                             
                                            
                                         </div>
