--- a/app/views/main/_resultados.html.erb
+++ b/app/views/main/_resultados.html.erb
@@ -4,26 +4,36 @@
                 <div class="register">
                     <div class="row">
                             	
-                                <div class="col-md-9 register-right">
+                                <div class="col-md-9">
                             
                                     <h1 class="register-heading">Tus resultados </h1>
                                     <div class="row register-form">
                                     
-                                        <div class="col-md-6">
-                                         <h1>Tu sueldo esperado : $<%= @sueldoEsperado.to_i  %> </h1> 
-                                         <h1>Tu sueldo esperado SInCNu: $<%= @sueldoEsperadoSinCnu.to_i  %> </h1> 
+                                        <div class="col-md-4">
+
+                                         <h1>Con un sueldo bruto de = <%=@perA%> por <%=35-@edad%> años</h1>
+
+                                         <h1>Con un sueldo bruto de = <%=@perB%> por <%=55-35%> años </h1>
+
+                                         <h1>Con un sueldo bruto de = <%=@perC%> por <%=65-55%> años </h1>
+
+                                     </div>
+
+                                        <div class="col-md-5">
+
+                                         <h1>Tu sueldo esperado : $<%= @sueldoEsperado.to_i  %> </h1>
+                                         <h1>Tu sueldo esperado Optimista : $<%= @sueldoOptimista.to_i  %> </h1>
+                                         <h1>Tu sueldo esperado Pesimista: $<%= @sueldoPesimista.to_i  %> </h1>
+                                         <h1>Ahorro Total SInCNu: $<%= @ahorradoEsperado.to_i  %> </h1> 
 
                                          <h1>global: $<%= @aux  %> </h1>
                                             
                                            
                                         </div>
-                                        <div class="col-md-4">
-
-                                        </div>
                                        
                                     </div>  
                                 </div> 
-                               	<div class="col-md-3 register-left">
+                               	<div class="col-md-1 register-left">
                             	    <img src="https://www.talosmarthome.com/wp-content/uploads/2019/11/	FAQ-icon-Talo.png" alt=""/>
                             	    <h3>Ahora ingresa tu situacion previsional</h3>
                             	</div>     
